<resources>
    <string name="app_name">GOME ID</string>
 	<string name="label">GomeAccountService</string>
    <string name="login_activity_loginfail_text_usernae_mmissing">Type the username for this account.</string>
    <string name="login_activity_loginfail_text_pwmissing">Password</string>
    <string name="login_activity_username_label">Username</string>
    <string name="login_activity_password_label">Password</string>
    <string name="login_activity_ok_button">Log In</string>
    <string name="btn_weibo_login">Weibo</string>
    <string name="btn_pre_step">Previous</string>
    <string name="btn_next_step">Next</string>
    <string name="btn_complete">Done</string>
    <string name="btn_talk_later">Later</string>
    <string name="btn_go_setup">Set up</string>
    <string name="btn_login_now">login now</string>
    <string name="btn_bind">Associate</string>
    <string name="btn_unbind">Unassociate</string>
    <string name="btn_set_now">Set Up</string>
    <string name="ui_activity_title_login">Login</string>
    <string name="ui_activity_title_login_out">Log out</string>
    <string name="ui_activity_title_set_pwd">Set password</string>
    <string name="ui_activity_title_reset_pwd">Reset password</string>
    <string name="ui_activity_title_retrieve_pwd">Retrieve Password</string>
    <string name="ui_activity_title_input_mail_phone">Registered phone number/email</string>
    <string name="ui_activity_title_phone_verify">Mobile phone verification</string>
    <string name="ui_activity_title_bind_phone">Phone</string>
    <string name="ui_activity_title_input_pwd">Password</string>
    <string name="ui_activity_title_new_pwd">New password</string>
    <string name="ui_activity_title_mail_verify">Email verification</string>
    <string name="ui_activity_title_register">Sign up</string>
    <string name="ui_activity_title_account">GOME ID</string>
    <string name="ui_activity_title_nick_name">Set a nickname</string>
    <string name="ui_activity_title_set_avatar">Set Avatar</string>
    <string name="ui_activity_title_bind_mailbox">Email</string>
    <string name="ui_activity_title_personal_info">Basic info</string>
    <string name="ui_activity_title_bind_unbind">bind unbind email phone number</string>
    <string name="ui_activity_title_password_security">Password security</string>
    <string name="ui_activity_title_modify_pwd">Change Password</string>
    <string name="ui_activity_title_security_phone_number">Security number</string>
    <string name="ui_activity_title_set_and_verify_security_phone_number">Set  &amp; verify security number</string>
    <string name="txt_forgot_password">Forget password</string>
    <string name="txt_msg_send_email">The verified e-mail was sent to</string>
    <string name="txt_send_email_reminder_part1">The verification email has been sent to %1$s</string>
    <string name="txt_send_email_reminder_part2">click Check Email </string>
    <string name="txt_send_email_reminder_part3">&#160;to complete.</string>
    <string name="txt_send_email_reminder_retrieve_pwd_part3">&#160;to complete.</string>
    <string name="txt_send_email_reminder_unbind_email_part3">&#160;to unassociate this email.</string>
    <string name="txt_register_success_info1_all">Your GOME ID has been created successfully. Set up your basic info and associate your phone number to enjoy more services? </string>
    <string name="txt_register_success_info_part1">Your GOME ID has been created successfully. </string>
    <string name="txt_register_success_info_part2">Setting up personal information and binding %1$s Will be more convenient GOME</string>
    <string name="txt_register_success_info_part3">Mobile phone service for you, whether or not to set?</string>
    <string name="txt_register_success_info_part4">Congratulations! You have successfully registered GOME account and completed </string>
    <string name="txt_register_success_info_part5">Personal information settings!</string>
    <string name="txt_set_avatar">Click to set avatar</string>
    <string name="txt_cannot_receive_active_email">Did not receive an verification email?</string>
    <string name="txt_resend_active_email">Click to resend.</string>
    <string name="txt_rest_pwd">Reset password</string>
    <string name="txt_old_pwd">Old password</string>
    <string name="txt_new_pwd">New password</string>
    <string name="txt_confirm_new_pwd">Confirm new password</string>
    <string name="txt_register_input_pwd">Enter password</string>
    <string name="txt_login_pwd">Password</string>
    <string name="txt_login_pwd_prompt">For your ID safety, please enter your password.</string>
    <string name="txt_register_input_pwd_again">Re-enter password</string>
    <string name="alert_pwd_null">Enter password</string>
    <string name="alert_old_pwd_null">Old password</string>
    <string name="alert_new_pwd_null">New password</string>
    <string name="alert_confirm_new_pwd_null">Confirm new password</string>
    <string name="alert_text_sms_verify_code_null">Enter your verification code</string>
    <string name="alert_text_phone_num_null">please input phone number!!</string>
    <string name="alert_text_phone_num_length_error">Invalid phone number, please re-enter it</string>
    <string name="alert_new_pwd_same_as_old">The new password is the same as the old one</string>
    <string name="alert_two_new_pwd_not_equal">Inconsistent password</string>
    <string name="alert_reset_pwd_success">The password has been reset.</string>
	<string name="alert_nick_name_null">Set a nickname</string>
	<string name="alert_account_or_pwd_error">Incorrect user name or password, please re-enter.</string>
	<string name="alert_server_return_null_error">Server exception, please try again later</string>
    <string name="txt_reset_pwd_alert_no_lgoin">login timeout,pelease login first</string>
    <string name="txt_reset_pwd_account_info">gomeId is: %1$s \n nick name:%2$s</string>
    <string name="edit_hint_login_name">Phone number / Email</string>
    <string name="edit_hint_pwd">Password</string>
    <string name="edit_hint_phone">Phone number</string>
    <string name="edit_hint_mail"> Email</string>
    <string name="edit_hint_phone_mail">Phone number / Email</string>
    <string name="edit_hint_sms_verify_code">Verification code</string>
    <string name="edit_hint_email_verify_code">Verification code</string>
    <string name="edit_hint_nick_name">Nickname</string>
    <string name="edit_hint_bind_mailbox">Email</string>
    <string name="edit_hint_bind_phone">Phone number</string>
    <string name="btn_text_send_sms_verify_code">Send verification code</string>
    <string name="btn_text_resend_sms_verify_code">resend sms verify code</string>
    <string name="btn_text_sending_sms_verify_code">Get code(%1$ss)</string>
    <string name="register_activity_title">Sign up</string>
    <string name="register_result_activity_title">Registration results</string>
    <string name="register_activity_nickName">Nickname</string>
    <string name="register_activity_secretNum">Password</string>
    <string name="register_activity_emailAddress">Email</string>
    <string name="register_activity_hint_sms_code">Enter the phone number used to receive the verification code</string>
    <string name="register_activity_phoneNumBtn">Send verification code</string>
    <string name="register_activity_hint_sureId">Enter your verification code</string>
    <string name="register_activity_registerBtn">Sign up</string>
    <string name="registerresult_activity_nickName">Nickname:</string>
    <string name="registerresult_activity_emailAddress">Email:</string>
    <string name="registerresult_activity_phoneNum">Phone number:</string>
    <string name="registerresult_activity_ok">OK</string>
	<string name="register_submitting">Registration information is uploading</string>
	<string name="register_account_exist">The account name already exists, please change！</string>
	<string name="phonenumber_not_empty">Phone number can not be empty!</string>
	<string name="phonenumber_too_short">Enter the phone number is too short!</string>
	<string name="register_info_not_empty">The relevant information must not be null!</string>
	<string name="register_code_send_again">%1$s s Post resend</string>
	<string name="register_send_again">Resend</string>
	<string name="alert_network_unavaiable">Network unavailable!</string>
	<string name="alert_network_connect_timeout">Network connect time out!</string>
	<string name="alert_input_valid_phone_or_email">Please input valid phone number or email!</string>
	<string name="alert_input_valid_email">The mailbox address is invalid. Please check it and re-enter it</string>
	<string name="alert_input_valid_phone">The cell phone number is invalid. Please check and re-enter it</string>
   <string name="dialog_title_no_network">No network,please check your network. </string>
   <string name="txt_set_network">Network Settings</string>
   <string name="txt_set_network_cancel">Cancel</string>
   <string name="txt_login_out_account">Log out</string>
   <string name="txt_login_off_account">Log off</string>
   <string name="txt_login_off_account_prompt">After logging off GOME ID, all your ID information and data in GOME cloud will be cleaned up. Log off?</string>
	<string name="weibosdk_demo_token_to_string_format_1">Token：%1$s \n Term of validity：%2$s</string>
	<string name="weibosdk_demo_token_has_existed">Token is still valid without logging in again.</string>
	<string name="weibosdk_demo_toast_auth_success">Authorization success</string>
   	<string name="weibosdk_demo_toast_auth_failed">Authorization failures</string>
   	<string name="weibosdk_demo_toast_auth_canceled">Cancel Authorization</string>
   <string name="txt_login_head_messgae">You can login with your GOME ID to enjoy cloud service, VIP after-sale service, intelligent recommendation and other rights and services.</string>
   <string name="txt_retrieve_pwd_head_message">If you have set the security  phone number, then the verification code will be sent to the security number.</string>
   <string name="txt_more_login_type">More login access</string>
   <string name="txt_register_gome_account">Sign up</string>
    <string name="txt_login_bottom_info">By tapping \"sign up\", you will agree and comply with</string>
    <string name="txt_login_bottom_gome_phone">GOME&#160;</string>
    <string name="txt_login_bottom_user_agreement">user agreement&#160;</string>
    <string name="txt_login_bottom_and">and&#160;</string>
    <string name="txt_login_bottom_privacy_policy">privacy policy.</string>
   	<string name="imageview_weixin_contentdescription">weixin</string>
   	<string name="imageview_weibo_contentdescription">weibo</string>
   	<string name="imageview_exit_contentdescription">exit</string>
   	<string name="imageview_avatar_contentdescription">avatar</string>
   <string name="txt_login_bottom_weixin_login">Wechat</string>
   <string name="txt_login_bottom_weibo_login">Weibo</string>
   <string name="txt_app_gallery">Gallery</string>
   <string name="txt_app_camera">Camera</string>
   <string name="txt_phone">Phone number</string>
   <string name="txt_email">Email</string>
   <string name="txt_personal_info">Basic info</string>
   <string name="txt_personal_info2">Edit avatar, nickname, etc</string>
   	<string name="txt_not_set_nickname">No nickname set</string>
   <string name="txt_not_set">Not set</string>
   <string name="txt_password_security">Password security</string>
   <string name="txt_login_out_prompt">After logging out GOME ID,  you can not enjoy cloud service, VIP after-sale service, intelligent recommendation and other rights and services anymore. Log out?</string>
   <string name="txt_avatar">Avatar</string>
   <string name="txt_nick_name">Nickname</string>
   <string name="text_skip">Skip</string>
    <string name="txt_verify_later">Verified later</string>
    <string name="txt_already_verified">Verified</string>
</resources>