<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_register_step2_mail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_activity_backgound"
    android:orientation="vertical"
    tools:context=".RegisterActivity" >
    <!-- 标题布局 -->
    <RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/title_height" 
	    android:layout_marginBottom="0dp"
	    android:layout_marginTop="0dp"
	    android:background="@color/color_title_bg"
	    >
    	<ImageView
    	   android:layout_marginLeft="@dimen/title_padding_left"
    	   android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:layout_alignParentLeft="true"
	       android:layout_centerVertical="true"
	       android:src="@drawable/ic_gome_icon_cancel"
	       android:contentDescription="@string/imageview_exit_contentdescription" 
	       android:onClick="doOnclickStep2MailBackButton"
    	/>
        <TextView 
           android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:layout_centerHorizontal="true"
	       android:layout_centerVertical="true"
	       android:textSize="@dimen/text_title_size"
	       android:textColor="@color/color_title_text"
	       
	       android:text="@string/ui_activity_title_mail_verify"
            />
       <View 
           android:layout_width="match_parent"
	       android:layout_height="@dimen/title_bottom_line_height"
	       android:background="@color/color_title_bg_bottom_line"
	       android:layout_alignParentBottom="true"
            />
    </RelativeLayout>
    <RelativeLayout 
      	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:layout_marginBottom="@dimen/page_bottom_margin"
       >
        <!-- 中间区域显示 -->
       <LinearLayout
           android:layout_width="wrap_content"
	       android:layout_height="wrap_content" 
	       android:layout_centerVertical="true"
	       android:layout_centerHorizontal="true"
	       android:orientation="vertical"
           >
		   <TextView
		       android:id="@+id/text_setp2_send_email_remiander"
	           android:layout_width="match_parent"
		       android:layout_height="wrap_content"
		       android:gravity="center_horizontal"
		       
		       android:textColor="@color/color_text_90"
		       android:textSize="@dimen/text_info_size"
		       
		       android:text="@string/txt_send_email_reminder_part1"
		
	            />
		   <LinearLayout
		       android:layout_width="match_parent"
	       	   android:layout_height="wrap_content"
	       	   android:gravity="center_horizontal"
	       	   android:orientation="horizontal" 
	       		>
		   	   <TextView
			       android:id="@+id/text_step8_check_mail" 
		           android:layout_width="wrap_content"
			       android:layout_height="wrap_content"
			       
			       android:textColor="@color/color_button_link"
            	   android:textSize="@dimen/text_info_size"
            	   
			       android:text="@string/txt_send_email_reminder_part2"
			       android:onClick="doOnclickCheckEmail"
	            />
		   	   <TextView
		           android:layout_width="wrap_content"
			       android:layout_height="wrap_content"
			       android:textColor="@color/color_text_90"
		       	   android:textSize="@dimen/text_info_size"
			       android:text="@string/txt_send_email_reminder_part3"
	            />
		   </LinearLayout>	   
	   	</LinearLayout>
	   	<!-- 底部区域显示 -->
	   <LinearLayout
           android:layout_width="match_parent"
	       android:layout_height="wrap_content" 
	       android:layout_alignParentBottom="true"
	       android:paddingLeft="20dp"
	       android:paddingRight="20dp"
	       android:layout_centerHorizontal="true"
	       android:orientation="vertical"
	        >
	   		<LinearLayout
	           android:layout_width="wrap_content"
		       android:layout_height="wrap_content" 
		       android:orientation="horizontal"
		       android:layout_gravity="center_horizontal"
		       android:gravity="center_horizontal"
	           >
			   <TextView
		           android:layout_width="wrap_content"
			       android:layout_height="wrap_content"
			       android:textColor="@color/color_text_90"
			       android:textSize="@dimen/text_text_bottom_info_size"
			       android:text="@string/txt_cannot_receive_active_email"
		            />
			   <TextView
			       android:id="@+id/text_step2_mail_resend_mail" 
		           android:layout_width="wrap_content"
			       android:layout_height="wrap_content"
			       android:textColor="@color/color_button_link"
			       android:textSize="@dimen/text_text_bottom_info_size"
			       android:text="@string/txt_resend_active_email"
			       android:onClick="doOnclickResendEmail"
		            />
			</LinearLayout>
           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal">
			<Button
                style="@com.gome:style/Widget.GOME.Light.Button"
				android:layout_width="150dp"
				android:layout_height="@dimen/button_default_height"
				android:layout_marginTop="10dp"
				android:text="@string/txt_verify_later"
				android:enabled="true"
                android:layout_alignParentLeft="true"
				android:onClick="doVerifyLater"
				android:paddingLeft="@dimen/button_padding_left"
				android:paddingRight="@dimen/button_padding_right"
				android:textSize="@dimen/btn_gome_text_size" />
               <Button
                   style="@com.gome:style/Widget.GOME.Light.Button"
                   android:layout_width="150dp"
                   android:layout_height="@dimen/button_default_height"
                   android:layout_marginTop="10dp"
                   android:text="@string/txt_already_verified"
                   android:enabled="true"
                   android:layout_alignParentRight="true"
                   android:onClick="doAlreadyVerified"
                   android:paddingLeft="@dimen/button_padding_left"
                   android:paddingRight="@dimen/button_padding_right"
                   android:textSize="@dimen/btn_gome_text_size" />
           </RelativeLayout>
		</LinearLayout>
    </RelativeLayout>

</LinearLayout>
