<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/retrieve_pwd_step4_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_activity_backgound"
    android:orientation="vertical"
    tools:context=".RetrievePwdActivity" >

   	<!-- 标题布局 -->
    <RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/title_height" 
	    android:layout_marginBottom="0dp"
	    android:layout_marginTop="0dp"
	    android:background="@color/color_title_bg"
	    >
    	<ImageView
    	   android:id="@+id/head_left_arrow"
    	   android:layout_marginRight="@dimen/title_arrow_margin_to_right"
    	   
    	   android:layout_marginLeft="@dimen/title_padding_left"
    	   android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:layout_alignParentLeft="true"
	       android:layout_centerVertical="true"
	       android:src="@drawable/gome_sys_icon_back"
	       android:contentDescription="@string/imageview_exit_contentdescription" 
	       android:onClick="doOnclickStep4BackButton"
    	/>
        <TextView 
	       android:layout_toRightOf="@+id/head_left_arrow"
	       
           android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:layout_centerHorizontal="true"
	       android:layout_centerVertical="true"
	       android:textSize="@dimen/text_title_size"
	       android:textColor="@color/color_title_text"
	       
	       android:text="@string/ui_activity_title_mail_verify"
            />
        <View 
           android:layout_width="match_parent"
	       android:layout_height="@dimen/title_bottom_line_height"
	       android:background="@color/color_title_bg_bottom_line"
	       android:layout_alignParentBottom="true"
            />
    </RelativeLayout>
    <RelativeLayout 
      	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:layout_marginBottom="@dimen/page_bottom_margin"
       >
        <!-- 中间区域显示 -->
       <LinearLayout
           android:layout_width="wrap_content"
	       android:layout_height="wrap_content" 
	       android:layout_centerVertical="true"
	       android:layout_centerHorizontal="true"
	       android:orientation="vertical"
           >
		   <TextView
		       android:id="@+id/step4_text_send_mail_reminder" 
	           android:layout_width="match_parent"
		       android:layout_height="wrap_content"
		       android:gravity="center_horizontal"
		       
		       android:textColor="@color/color_text_90"
		       android:textSize="@dimen/text_info_size"
		       
		       android:text="@string/txt_send_email_reminder_part1"
		
	            />
		   <LinearLayout
		       android:layout_width="match_parent"
	       	   android:layout_height="wrap_content"
	       	   android:gravity="center_horizontal"
	       	   android:orientation="horizontal" 
	       		>
		   	   <TextView
			       android:id="@+id/step4_check_mail" 
		           android:layout_width="wrap_content"
			       android:layout_height="wrap_content"
			       android:textColor="@color/color_button_link"
            	   android:textSize="@dimen/text_info_size"
			       android:text="@string/txt_send_email_reminder_part2"
			       android:onClick="doOnclickCheckEmail"
	            />
		   	   <TextView
			       android:id="@+id/step4_center_text3" 
		           android:layout_width="wrap_content"
			       android:layout_height="wrap_content"
		       	   android:textColor="@color/color_text_90"
		       	   android:textSize="@dimen/text_info_size"
			       android:text="@string/txt_send_email_reminder_retrieve_pwd_part3"
	            />
		   </LinearLayout>	   
	   	</LinearLayout>
	   	<!-- 底部区域显示 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            >
	   	<LinearLayout
           android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
           android:layout_gravity="center_horizontal"
           android:gravity="center_horizontal"
	       android:orientation="horizontal"
           >
		   	<TextView
			       android:id="@+id/step4_bottom_text1" 
		           android:layout_width="wrap_content"
			       android:layout_height="wrap_content"
			       android:textColor="@color/color_text_90"
			       android:textSize="@dimen/text_text_bottom_info_size"
			       android:text="@string/txt_cannot_receive_active_email"
	            />
		   	<TextView
			       android:id="@+id/step4_resend_mail" 
		           android:layout_width="wrap_content"
			       android:layout_height="wrap_content"
			       android:textColor="@color/color_button_link"
			       android:textSize="@dimen/text_text_bottom_info_size"
			       android:text="@string/txt_resend_active_email"
			       android:onClick="doOnclickResendEmail"
	            />
		</LinearLayout>
        <Button
            style="@com.gome:style/Widget.GOME.Light.Button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_default_height"
            android:layout_marginTop="10dp"
            android:text="@string/txt_already_verified"
            android:enabled="true"
            android:layout_alignParentRight="true"
            android:onClick="doAlreadyVerified"
            android:paddingLeft="@dimen/button_padding_left"
            android:paddingRight="@dimen/button_padding_right"
            android:textSize="@dimen/btn_gome_text_size" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
