<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_register_step6_public"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_activity_backgound"
    android:orientation="vertical"
    tools:context=".RegisterActivity" >

	<!-- 标题布局 -->
    <RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/title_height" 
	    android:layout_marginBottom="34dp"
	    android:layout_marginTop="0dp"
	    android:background="@color/color_title_bg"
	    >
    	<ImageView
    	   android:layout_marginLeft="@dimen/title_padding_left"
    	   android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:layout_alignParentLeft="true"
	       android:layout_centerVertical="true"
	       android:src="@drawable/gome_sys_icon_back"
	       android:contentDescription="@string/imageview_exit_contentdescription" 
	       android:onClick="doOnclickStep6PublicBackButton"
    	/>
        <TextView
           android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:layout_centerHorizontal="true"
	       android:layout_centerVertical="true"
	       android:textSize="@dimen/text_title_size"
	       android:textColor="@color/color_title_text"
	       
	       android:text="@string/ui_activity_title_set_avatar"
            />
       <TextView
    	   android:layout_marginRight="@dimen/title_padding_left"
    	   android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:layout_alignParentRight="true"
	       android:layout_centerVertical="true"
	       android:textColor="@color/color_button_link"
	       android:textSize="@dimen/text_title_size"
	       android:text="@string/text_skip"
	       
	       android:onClick="doOnclickStep6PublicSkipButton"
    	/>
        <View 
           android:layout_width="match_parent"
	       android:layout_height="@dimen/title_bottom_line_height"
	       android:background="@color/color_title_bg_bottom_line"
	       android:layout_alignParentBottom="true"
            />        
    </RelativeLayout>
    <LinearLayout 
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:layout_marginTop="@dimen/activity_item_vertical_margin"
		android:paddingBottom="0dip"
		android:paddingLeft="20dip"
		android:paddingRight="20dip">
		<!--中间布局  -->
		<LinearLayout
		    android:id="@+id/layout_avatar_top"
		    android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
		    >
			<com.gome.gomeaccountservice.CircleImageView
			    android:id="@+id/image_set_avatar"
				android:layout_width="@dimen/avatar_image_width_large"
				android:layout_height="@dimen/avatar_image_height_large"
				android:layout_marginBottom="20dp"
				android:contentDescription="@string/imageview_avatar_contentdescription"
				android:layout_gravity="center_vertical|center_horizontal"
				android:onClick="doOnclickRegisterStep6SetAvatar"
				android:src="@drawable/gome_sys_icon_head_da"/>
			<TextView
	           android:layout_width="wrap_content"
		       android:layout_height="wrap_content"
			   android:layout_gravity="center_horizontal"
			   android:textColor="@color/color_title_text"
			   android:textSize="16sp"
		       android:text="@string/txt_set_avatar"

            />
		</LinearLayout> 
		<FrameLayout
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"

	       android:layout_marginTop="@dimen/button_margin_top"
	       android:paddingLeft="0dip"
	       android:paddingRight="0dip">
	       <Button
               android:id="@+id/btn_step6_public_next"
               style="@com.gome:style/Widget.GOME.Light.Button"
	           android:layout_width="match_parent"
	           android:layout_height="@dimen/button_default_height"
	           android:paddingLeft="@dimen/button_padding_left"
	           android:paddingRight="@dimen/button_padding_right"
	           android:text="@string/btn_next_step"
	           android:textSize="@dimen/btn_gome_text_size"
	           android:layout_gravity="center_horizontal"
	           android:onClick="doOnclickStep6PublicNextButton" />
	 	</FrameLayout>
	 </LinearLayout>	
</LinearLayout>